--- a/style.css
+++ b/style.css
@@ -13,12 +13,26 @@ html {
 
 body {
     align-items: center;
-    background: linear-gradient(320deg, #eb92be, #ffef78, #63c9b4);
+    background: linear-gradient(45deg, #d2001a, #7462ff, #f48e21, #23d5ab);
+    background-size: 300% 300%;
+    animation: color 12s ease-in-out infinite;
     display: flex;
     font-family: 'Dosis', sans-serif;
     font-display: swap;
     height: inherit;
     justify-content: center;
+}
+
+@keyframes color{
+    0%{
+        background-position: 0 50%;
+    }
+    50%{
+        background-position: 100% 50%;
+    }
+    100%{
+        background-position: 0 50%;
+    }
 }
 
 .wrapper {
@@ -70,6 +84,7 @@ body {
     font-size: 24px;
     height: 65px;
     transition: ease-in-out .2s;
+    cursor: pointer;
 }
 
 .calc-button:last-child{
